--- a/projects/04-react-prueba-tecnica/package.json
+++ b/projects/04-react-prueba-tecnica/package.json
@@ -9,6 +9,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "standard": "^17.1.0",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "4.3.1",
+    "axios": "^1.7.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
